# backend/src/app.js
@@ -41,6 +41,8 @@ app.get('/v0/listings', listing.getListings);
 app.get('/v0/listing/:id', listing.getListing);
 app.get('/v0/filters', filters.getFilters);
 
+app.post('/v0/listing', auth.check, listing.postListing);
+
 app.use((err, req, res, next) => {
   res.status(err.status).json({
     message: err.message,
